# wise_units

./: .gitignore  Atoms.rs  Atoms.toml  CHANGELOG.md  Cargo.toml  Justfile  README.md  bacon.toml  build.rs  catalog-info.yaml  rustfmt.toml  ucum-essence.xml
api/: Atoms.rs  Atoms.toml  CHANGELOG.md  Cargo.toml  build.rs
api/benches/: measurements_benchmarks.rs  parse_benchmarks.rs  unit_benchmarks.rs
api/benches/common/: mod.rs
api/src/: as_fraction.rs  composable.rs  composition.rs  convertible.rs  decomposable.rs  dimension.rs  error.rs  field_eq.rs  into_reduced.rs  invert.rs  is_compatible_with.rs  lib.rs  macros.rs  measurement.rs  parser.rs  reduce.rs  reducible.rs  reduction_decomposer.rs  simple_decomposer.rs  test_atom.rs  unit.rs  v2.rs  wrappable.rs
api/src/decomposer/: decomposable.rs  mod.rs  reduction.rs  simple.rs
api/src/measurement/: composable.rs  convertible.rs  display.rs  field_eq.rs  hash.rs  into_reduced.rs  invert.rs  is_compatible_with.rs  mod.rs  ops.rs  partial_eq.rs  partial_ord.rs  reducible.rs  serde.rs  to_reduced.rs  ucum_unit.rs  v2.rs
api/src/measurement/v2/: convert.rs  dim.rs  ops.rs  ucum.rs  unit_conversion.rs
api/src/parser/: annotation_composition.rs  atom.rs  atom_test.rs  classification.rs  composable.rs  composition.rs  definition.rs  dimension.rs  error.rs  function_set.rs  is_compatible_with.rs  mod.rs  prefix.rs  property.rs  symbols.rs  term.rs  terms.rs  transform.rs  ucum_symbol.rs
api/src/parser/atom/: partial_eq.rs  reducible.rs  v2.rs
api/src/parser/composition/: v2.rs
api/src/parser/definition/: reducible.rs  v2.rs
api/src/parser/prefix/: ucum_symbol.rs  v2.rs
api/src/parser/symbols/: mapper.rs  mod.rs  symbol.pest  symbol.rs  symbol_parser.rs  symbol_parser_test.rs
api/src/parser/term/: annotation_composable.rs  composable.rs  display.rs  field_eq.rs  invert.rs  mod.rs  v2.rs  (+4 more)
api/src/unit/: as_fraction.rs  composable.rs  custom_ffi.rs  deref.rs  display.rs  field_eq.rs  from.rs  from_str.rs  hash.rs  into_reduced.rs  invert.rs  is_compatible_with.rs  mod.rs  ops.rs  partial_eq.rs  partial_ord.rs  reducible.rs  serde.rs  term_reducing.rs  to_reduced.rs  ucum_unit.rs  v2.rs  wrapper.rs
api/src/v2/: behavior_traits.rs  measurement.rs  traits.rs  type_traits.rs  ucum.rs  ucum_symbol.rs  ucum_unit.rs
api/src/wrappable/: atom.rs  measurement.rs  prefix.rs  property.rs  term.rs  unit.rs
api/tests/: measurements_test.rs
atom_generator/: Cargo.toml  README.md
atom_generator/src/: from_toml.rs  generator.rs  lib.rs  main.rs  rust_structs.rs  toml_structs.rs
atom_generator/src/from_toml/: atoms.rs  custom_atoms.rs  mod.rs
atom_generator/src/generator/: atom.rs  classification.rs  handlebars.rs  mapper.rs  mod.rs  property.rs  symbol_grammar.rs  symbol_parser.rs
atom_generator/src/rust_structs/: mod.rs  pest_symbol_list.rs  rust_atom.rs  rust_atom_list.rs  rust_classification_list.rs  rust_function_set.rs  rust_mapper_list.rs  rust_property_list.rs  rust_unit.rs
atom_generator/src/templates/: atom.rs.hbs  classification.rs.hbs  mapper.rs.hbs  property.rs.hbs  symbol.pest.hbs  symbol_parser.rs.hbs
atom_generator/src/toml_structs/: mod.rs  toml_atom.rs  toml_atom_list.rs  toml_base_unit.rs  toml_custom_atom_list.rs  toml_definition.rs  toml_prefix.rs  toml_unit.rs
crates/api/: CHANGELOG.md  Cargo.toml
crates/api/benches/: common.rs  measurements_benchmarks.rs  unit_benchmarks.rs
crates/api/src/: annotation.rs  atom.rs  atom_test.rs  composable.rs  composition.rs  error.rs  invert.rs  is_compatible_with.rs  lib.rs  macros.rs  measurement.rs  parser.rs  prefix.rs  property.rs  reduce.rs  reducible.rs  term.rs  testing.rs  ucum_symbol.rs  ucum_unit.rs  unit.rs  v2.rs
crates/api/tests/: measurements_test.rs
crates/ffi/: Cargo.toml  Changelog.md  README.md  build.rs  cbindgen.toml
crates/ffi/src/: lib.rs  measurement.rs  unit.rs
crates/web/: Cargo.toml
crates/web/.cargo/: config.toml
crates/web/src/: app.rs
definition_fetcher/: Cargo.toml
definition_fetcher/src/: main.rs
ffi/: Cargo.toml  Changelog.md  README.md  build.rs
ffi/src/: lib.rs  measurement.rs  unit.rs
interpreter/: Cargo.toml
interpreter/src/: dimension.rs  error.rs  lib.rs  macros.rs  number.rs  prefix.rs  prefixes.rs  runtime_unit.rs  unit.rs  units.rs
parser/: Cargo.toml
parser/benches/: parse_benchmark.rs  parse_benchmarks.rs
parser/src/: annotatable.rs  annotation.rs  atom_collection.rs  atom_symbol.rs  base_units.rs  classification.rs  component.rs  composable.rs  composition.rs  definition.rs  derived_atoms.rs  derived_units.rs  digits.rs  error.rs  exponent.rs  factor.rs  lib.rs  macros.rs  main_term.rs  parse.rs  parsers.rs  prefix.rs  prefix_collection.rs  prefix_symbol.rs  prefixes.rs  sign.rs  simple_unit.rs  symbol_collection.rs  symbol_key.rs  term.rs  test_helper.rs  tokens.rs  ucum_symbol.rs  ucum_unit.rs  units.rs
parser/src/parsers/: annotatable.rs  annotation.rs  atom_symbol.rs  component.rs  digits.rs  exponent.rs  factor.rs  main_term.rs  prefix_symbol.rs  sign.rs  simple_unit.rs  term.rs
parser/src/symbols/: mod.rs  symbol.pest  symbol.rs  symbol_parser.rs
parser/src/terms/: term.pest  term_parser.rs
parser/src/tokens/: annotatable.rs  annotation.rs  atom_symbol.rs  component.rs  dimension.rs  main_term.rs  prefix_symbol.rs  simple_unit.rs  term.rs  unit_value.rs  value_function.rs
parser/tests/: atom_test.rs  parsing_tests.rs  symbol_parser_test.rs
parsing/: Atoms.toml  Cargo.toml  build.rs
parsing/src/: atom.rs  composable.rs  custom_atoms.rs  definition.rs  dimension.rs  function_set.rs  lib.rs  macros.rs  parser.rs  prefix.rs  property.rs  symbol_mapper.rs  term.rs  test_macros.rs  ucum_symbol.rs
parsing/src/interpreter/: mod.rs
parsing/src/symbols/: mapper.rs  mod.rs  symbol.pest  symbol.rs  symbol_parser.rs
parsing/src/terms/: mod.rs  term.pest  term_parser.rs
unit_parser/: Cargo.toml
unit_parser/src/: atom.rs  lib.rs  symbol.pest  symbol_interpreter.rs  symbol_parser.rs  ucum_symbol.rs  unit.pest
unit_parser/src/interpreter/: main_term.rs  mod.rs
(+436 files in other folders)
