[workspace]
members = [
  "api",
  "atom_generator",
  "definition_fetcher",
  "ffi",
]
resolver = "2"

[patch."agrian-registry".ffi_common]
# path = "../ffi_common/ffi_common"
git = "ssh://git@github.com/agrian-inc/ffi_common.git"
branch = "feature/DEV-15926_agrian_units_support"

[patch."agrian-registry".ffi_core]
# path = "../ffi_common/ffi_core"
git = "ssh://git@github.com/agrian-inc/ffi_common.git"
branch = "feature/DEV-15926_agrian_units_support"

[patch."agrian-registry".ffi_derive]
# path = "../ffi_common/ffi_derive"
git = "ssh://git@github.com/agrian-inc/ffi_common.git"
branch = "feature/DEV-15926_agrian_units_support"

[patch."agrian-registry".ffi_internals]
# path = "../ffi_common/ffi_internals"
git = "ssh://git@github.com/agrian-inc/ffi_common.git"
branch = "feature/DEV-15926_agrian_units_support"
