[workspace]
members = ["api", "atom_generator", "definition_fetcher", "ffi"]
resolver = "2"

[workspace.package]
rust-version = "1.64.0"

[workspace.dependencies]
approx = "0.5"
ffi_common = { version = "0.7", registry = "crates-registry" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
