[package]
name = "wise_units"
version = "0.18.0"
description = "Measure things using UCUM units"
repository = "https://github.com/agrian-inc/wise_units"
license = "MIT"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2018"
publish = ["agrian-registry"]

[dependencies]
approx = "0.5"
ffi_common = { version = "0.4", registry = "agrian-registry", optional = true }
pest = "^2.0"
pest_derive = "^2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.1"
criterion = "0.3"
lazy_static = "1.4"
rmp-serde = "0.15"
serde_json = "1.0"

[features]
# Enables the C foreign function interface. Some types may become repr(C) under this flag, and an
# additional ffi module will be generated for each supported resource type.
cffi = ["ffi_common"]

[[bench]]
name = "measurements_benchmarks"
harness = false

[[bench]]
name = "unit_benchmarks"
harness = false
