[package]
name = "wise_units"
version = "0.22.0"
description = "Measure things using UCUM units"
repository = "https://github.com/agrian-inc/wise_units"
license = "MIT"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2021"
publish = ["crates-registry"]

[dependencies]
approx.workspace = true
ffi_common = { workspace = true, optional = true }
pest = "^2.1"
pest_derive = "^2.1"
serde = { workspace = true, optional = true }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
lazy_static.workspace = true
rmp-serde = "1.0"
serde_json = "1.0"

[features]
default = []

# Enables the C foreign function interface. Some types may become repr(C) under this flag, and an
# additional ffi module will be generated for each supported resource type.
cffi = ["ffi_common"]

v2 = []
wrappable = ["v2"]

[[bench]]
name = "measurements_benchmarks"
harness = false

[[bench]]
name = "unit_benchmarks"
harness = false
