[package]
name = "wise_units-atom_generator"
version = "0.1.0"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2018"

[dependencies]
handlebars = "3.0"
heck = "0.3"
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
toml = "0.5"
