[package]
name = "wise_units-atom_generator"
version = "0.20.0"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2021"
publish = false

[dependencies]
handlebars = "4.0"
heck = "0.4"
lazy_static.workspace = true
log = "0.4"
maplit = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
serde.workspace = true
syn = "2.0"
toml = "0.7"
