[package]
name = "wise_units-ffi"
version = "0.21.1"
description = "FFI wrapper for wise_units"
repository = "https://github.com/agrian-inc/wise_units"
license = "MIT"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2021"
publish = ["agrian-registry"]

[dependencies]
ffi_common = { version = "0.7", registry = "agrian-registry" }
wise_units = { version = "0.21", registry = "agrian-registry" }

[build-dependencies]
cbindgen = "0.20"

[dev-dependencies]
approx = "0.5"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
