[package]
name = "wise_units-ffi"
version = "0.22.1"
description = "FFI wrapper for wise_units"
repository = "https://github.com/agrian-inc/wise_units"
license = "MIT"
authors = ["Nicholas Smillie <nicholas@agrian.com>"]
edition = "2021"
publish = ["crates-registry"]

[dependencies]
ffi_common.workspace = true
wise_units = { version = "0.22", registry = "crates-registry" }

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
approx.workspace = true

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
