[package]
name = "wise_units-interpreter"
version = "0.1.0"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wise_units-parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions = "0.6.1"
