[package]
name = "wise_units-parser"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4.1"

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "parse_benchmarks"
harness = false
