[package]
name = "wise_units-parsing"
version = "0.1.0"
authors = ["Steve Loveless <steve@agrian.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.0"
pest = "^1.0"
pest_derive = "^1.0"

[dev-dependencies]
approx = "0.1"

[build-dependencies]
wise_units-custom = { path = "../custom" }
