[package]
name = "wise_units"
version = "0.22.0"
description = "Measure things using UCUM units"
repository = "https://github.com/agrian-inc/wise_units"
license = "MIT"
authors = ["Steve Loveless <steve@agrian.com>"]
edition = "2021"
publish = ["agrian-registry"]

[dependencies]
approx.workspace = true
ffi_common = { workspace = true, optional = true }
num-traits = "0.2"
pest = "^2.1"
pest_derive = "^2.1"
serde = { workspace = true, optional = true }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
rmp-serde = "1.0"
serde_json = "1.0"

[features]
default = []

# Enables the C foreign function interface. Some types may become repr(C) under this flag, and an
# additional ffi module will be generated for each supported resource type.
cffi = ["ffi_common"]

[[bench]]
name = "measurements_benchmarks"
harness = false

[[bench]]
name = "unit_benchmarks"
harness = false
