[workspace]

[package]
name = "wise_units_web"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wise_units = { path = "../api", features = ["serde"] }
loco-rs = { version = "0.6.2", default-features = false, features = ["cli"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
eyre = "*"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"

axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "wise_units_web-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { version = "0.6.2", default-features = false, features = [
  "testing",
  "cli",
] }
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
